--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -6,3 +6,21 @@ categories: [Project Work, Home Lab]
 tags: [HL]
 description: Security and Pentest Home Lab Environment
 ---
+
+![Desktop View](/assets/img/HomeLab/Homelab-1.png){: width="1000" height="800" }
+
+## Home Lab Overview 
+
+- pfsense Gateway and Firewall
+
+- Kali Linux (Management VM)
+
+- Metasploit, Chronos
+
+- Malware Analysis Lab (Windows & Linux)
+
+- Security VMs (DFIR & SIEM) Splunk and Tsurugi Linux 
+
+- Windoiws Server with Active Directory
+
+- Cyber Range (Vulnerable VMs for CTF practice) Flare VM and REMnux
