--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -11,16 +11,22 @@ description: Security and Pentest Home Lab Environment
 
 ## Home Lab Overview 
 
-- pfsense Gateway and Firewall
+- **pfSense** – Gateway and firewall for managing network traffic and segmentation.
 
-- Kali Linux (Management VM)
+- **Kali Linux** – Management VM with tools for penetration testing and administration.
 
-- Metasploit, Chronos
+- **Metasploit & Chronos** – Used for exploit development and time-based attack simulations.
 
-- Malware Analysis Lab (Windows & Linux)
+- **Malware Analysis Lab** – Isolated environment with Windows and Linux VMs for analyzing malware samples.
 
-- Security VMs (DFIR & SIEM) Splunk and Tsurugi Linux 
+- **Security VMs**
 
-- Windoiws Server with Active Directory
+ - **DFIR (Digital Forensics & Incident Response)** – Using tools like Tsurugi Linux.
 
-- Cyber Range (Vulnerable VMs for CTF practice) Flare VM and REMnux
+ - **SIEM (Security Information and Event Management)** – Powered by Splunk for log aggregation and analysis.
+
+- **Windows Server** – Configured with Active Directory for enterprise-like domain management and authentication scenarios.
+
+- **Cyber Range** – Collection of vulnerable VMs (e.g., FLARE VM, REMnux) for CTF practice and reverse engineering.
+
+![Desktop View](/assets/img/HomeLab/Homelab-1.png){: width="500" height="1000" }
