--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -29,4 +29,4 @@ description: Security and Pentest Home Lab Environment
 
 - **Cyber Range** – Collection of vulnerable VMs (e.g., FLARE VM, REMnux) for CTF practice and reverse engineering.
 
-![Desktop View](/assets/img/HomeLab/Diagram.png){: width="500" height="1000" }
+![Desktop View](/assets/img/HomeLab/Diagram1.svg){: width="500" height="1000" }
