Fixed prompt box in HL

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -31,6 +31,8 @@ description: Security and Pentest Home Lab Environment
 
 ![Desktop View](/assets/img/HomeLab/Diagram1.png){: width="500" height="1000" }
 
-{% include prompt.html type='warning' title='Before starting' %}
-pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest.
+<br>
 
+{% include prompt.html type='warning' title='Before starting' content="pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest." %}
+
+<br>
