--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -35,4 +35,15 @@ description: Security and Pentest Home Lab Environment
 pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest.  
 {: .prompt-warning }
 
+> `info` 
+
+**Requirements for System**
+
+64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support
+
+16GB RAM
+
+250GB Disk Space
+{: .prompt-info }
+
 
