Change for Info

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -37,7 +37,7 @@ pfSense is basically the core of the whole lab — it's the router and firewall 
 
 > `info` 
 
-**Requirements for System**
+Requirements for System
 
 64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support
 
