New change for info

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -36,13 +36,9 @@ pfSense is basically the core of the whole lab — it's the router and firewall 
 {: .prompt-warning }
 
 > `info` 
-
-Requirements for System
-
+Requirements for System:
 64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support
-
 16GB RAM
-
 250GB Disk Space
 {: .prompt-info }
 
