Started Homelab blog

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -42,4 +42,30 @@ Requirements for System:
 250GB Disk Space
 {: .prompt-info }
 
+### Checking and Enabling Virtualization for VirtualBox
+
+Before using VirtualBox, your computer must support virtualization technology. On a Windows system, you can verify this by opening Task Manager (press Ctrl + Shift + Esc) and selecting the Performance tab. Look for the Virtualization field—if it says Enabled, no further steps are necessary.
+
+![Desktop View](/assets/img/HomeLab/TH.png){: width="700" height="500" }
+
+If virtualization is marked as Disabled, it indicates that while your processor does support virtualization, the feature is currently turned off in your system’s BIOS settings. If the virtualization option isn’t listed at all, your processor likely does not support this functionality.
+
+To turn on virtualization, you’ll need to access your computer's BIOS. Since the process for entering the BIOS can vary by manufacturer and device model, consult your system’s user manual or check online resources specific to your hardware for guidance.
+
+### Installing VirtualBox
+
+After enabling virutalization we then can start the process of building our homelab. 
+
+#### Download VirutalBox
+
+URL for VB Download: (https://www.virtualbox.org/wiki/Downloads)
+
+> `tip` Download Virtual Box and the VirtualBox Extension Pack
+{: .prompt-tip }
+
+You will then have a `.exe` and a `.vbox-extpack` open the VirtualBox.exe and start the install.
+
+#### Installing VirtualBox
+
+
 
