Fixed img TM issue

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -46,7 +46,7 @@ Requirements for System:
 
 Before using VirtualBox, your computer must support virtualization technology. On a Windows system, you can verify this by opening Task Manager (press Ctrl + Shift + Esc) and selecting the Performance tab. Look for the Virtualization field—if it says Enabled, no further steps are necessary.
 
-![Desktop View](/assets/img/HomeLab/TH.png){: width="700" height="500" }
+![Desktop View](/assets/img/HomeLab/TM.png){: width="700" height="500" }
 
 If virtualization is marked as Disabled, it indicates that while your processor does support virtualization, the feature is currently turned off in your system’s BIOS settings. If the virtualization option isn’t listed at all, your processor likely does not support this functionality.
 
