THM Overview finished

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -35,7 +35,7 @@ description: Security and Pentest Home Lab Environment
 pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest.  
 {: .prompt-warning }
 
-> `info` 
+> `Info` 
 Requirements for System:
 64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support
 16GB RAM
@@ -67,5 +67,57 @@ You will then have a `.exe` and a `.vbox-extpack` open the VirtualBox.exe and st
 
 #### Installing VirtualBox
 
+Click on the VirtualBox executable to start the setup. Click on Next to continue.
 
 
+Leave all the settings on their default value and click on Next.
+
+
+Click on `Yes`.
+
+
+Click on `Yes`.
+
+
+Click on `Install`.
+
+
+Click on `Finish` to close the installer and start VirtualBox.\
+
+![Desktop View](/assets/img/HomeLab/HL-1.png){: width="700" height="400" }
+
+
+#### Installing Guest Additions
+
+From the File Menu bar select: `File -> Tools -> Extension Pack Manager`
+
+![Desktop View](/assets/img/HomeLab/HL-2.png){: width="700" height="400" }
+
+On the Extension Manager page click on `Install`.
+
+![Desktop View](/assets/img/HomeLab/HL-3.png){: width="700" height="400" }
+
+Select the `.vbox-extpack` file that we downloaded. Click on Open.
+
+Click on `Install` to confirm the selection.
+
+![Desktop View](/assets/img/HomeLab/HL-4.png){: width="700" height="400" }
+
+Once the installation is complete click on the Hamburger icon on the right-side of `Tools` and select `Welcome`.
+
+> `UI Changes` 
+With the release of v7.1, Oracle has given Virtual Box GUI a makeover. Make sure to select “Expert” mode by using the toggle at the top left corner. Once in Expert mode all the options will be identical to the options found in the previous versions of Virtual Box.
+
+#### Changing VM Storage Location
+
+To change the default storage location of the VMs.
+
+From The File Menu bar select: File -> `Preferences`.
+
+From the `General` tab change the value of Default Machine Folder to change the default storage location of the VMs.
+
+![Desktop View](/assets/img/HomeLab/HL-5.png){: width="700" height="400" }
+
+In the next module, we will start with the installation and configuration of pfSense.
+
+- [Next → Installing pfSense](/posts/HomeLab-Installing-pfSense)
