Added more to SQL 2nd page

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -107,6 +107,7 @@ Once the installation is complete click on the Hamburger icon on the right-side 
 
 > `UI Changes` 
 With the release of v7.1, Oracle has given Virtual Box GUI a makeover. Make sure to select “Expert” mode by using the toggle at the top left corner. Once in Expert mode all the options will be identical to the options found in the previous versions of Virtual Box.
+{: .prompt-info }
 
 #### Changing VM Storage Location
 
