Created Home lab pages and added to pfSense

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -121,4 +121,4 @@ From the `General` tab change the value of Default Machine Folder to change the 
 
 In the next module, we will start with the installation and configuration of pfSense.
 
-- [Next → Installing pfSense](/posts/HomeLab-Installing-pfSense)
+- [Next → Setting Up pfSense: A Step-by-Step Guide](/posts/HomeLab-Installing-pfSense)
