Cleaned up Homelab so far

--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -9,116 +9,107 @@ description: Security and Pentest Home Lab Environment
 
 ![Desktop View](/assets/img/HomeLab/Homelab-1.png){: width="1000" height="800" }
 
-## Home Lab Overview 
+## 🧭 Home Lab Overview 
 
-- **pfSense** – Gateway and firewall for managing network traffic and segmentation.
-
-- **Kali Linux** – Management VM with tools for penetration testing and administration.
-
-- **Metasploit & Chronos** – Used for exploit development and time-based attack simulations.
-
-- **Malware Analysis Lab** – Isolated environment with Windows and Linux VMs for analyzing malware samples.
-
+- **pfSense** – Gateway and firewall for managing network traffic and segmentation.  
+- **Kali Linux** – Management VM with tools for penetration testing and administration.  
+- **Metasploit & Chronos** – Used for exploit development and time-based attack simulations.  
+- **Malware Analysis Lab** – Isolated environment with Windows and Linux VMs for analyzing malware samples.  
 - **Security VMs**
-
- - **DFIR (Digital Forensics & Incident Response)** – Using tools like Tsurugi Linux.
-
- - **SIEM (Security Information and Event Management)** – Powered by Splunk for log aggregation and analysis.
-
-- **Windows Server** – Configured with Active Directory for enterprise-like domain management and authentication scenarios.
-
-- **Cyber Range** – Collection of vulnerable VMs (e.g., FLARE VM, REMnux) for CTF practice and reverse engineering.
+  - **DFIR (Digital Forensics & Incident Response)** – Using tools like Tsurugi Linux.  
+  - **SIEM (Security Information and Event Management)** – Powered by Splunk for log aggregation and analysis.  
+- **Windows Server** – Configured with Active Directory for enterprise-like domain management and authentication scenarios.  
+- **Cyber Range** – Collection of vulnerable VMs (e.g., FLARE VM, REMnux) for CTF practice and reverse engineering.  
 
 ![Desktop View](/assets/img/HomeLab/Diagram2.png){: width="500" height="1000" }
 
-> `Before Starting`
-pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest.  
+> `Before Starting`  
+> pfSense is basically the core of the whole lab — it's the router and firewall that everything else connects through. Make sure it's the first VM you boot up whenever you're starting the lab. If it's not running, none of the other VMs will be able to reach the internet or talk to each other. Once pfSense is online, you can start spinning up the rest.  
 {: .prompt-warning }
 
-> `Info` 
-Requirements for System:
-64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support
-16GB RAM
-250GB Disk Space
+> `Info`  
+> Requirements for System:  
+> 64-bit multi-threaded CPU (minimum 4 cores) with Virtualization Support  
+> 16GB RAM  
+> 250GB Disk Space  
 {: .prompt-info }
 
-### Checking and Enabling Virtualization for VirtualBox
+---
 
-Before using VirtualBox, your computer must support virtualization technology. On a Windows system, you can verify this by opening Task Manager (press Ctrl + Shift + Esc) and selecting the Performance tab. Look for the Virtualization field—if it says Enabled, no further steps are necessary.
+## 🖥️ Checking and Enabling Virtualization for VirtualBox
+
+Before using VirtualBox, your computer must support virtualization technology. On a Windows system, you can verify this by opening **Task Manager** (press `Ctrl + Shift + Esc`) and selecting the **Performance** tab. Look for the **Virtualization** field — if it says `Enabled`, no further steps are necessary.
 
 ![Desktop View](/assets/img/HomeLab/TM.png){: width="700" height="500" }
 
-If virtualization is marked as Disabled, it indicates that while your processor does support virtualization, the feature is currently turned off in your system’s BIOS settings. If the virtualization option isn’t listed at all, your processor likely does not support this functionality.
+If virtualization is marked as `Disabled`, it indicates that while your processor does support virtualization, the feature is currently turned off in your system’s BIOS settings. If the virtualization option isn’t listed at all, your processor likely does not support this functionality.
 
 To turn on virtualization, you’ll need to access your computer's BIOS. Since the process for entering the BIOS can vary by manufacturer and device model, consult your system’s user manual or check online resources specific to your hardware for guidance.
 
-### Installing VirtualBox
+---
 
-After enabling virutalization we then can start the process of building our homelab. 
+## 💽 Installing VirtualBox
 
-#### Download VirutalBox
+After enabling virtualization we can start the process of building our homelab.
 
-URL for VB Download: (https://www.virtualbox.org/wiki/Downloads)
+### 📥 Download VirtualBox
 
-> `tip` Download Virtual Box and the VirtualBox Extension Pack
+URL for VB Download:  
+[https://www.virtualbox.org/wiki/Downloads](https://www.virtualbox.org/wiki/Downloads)
+
+> `tip`  
+> Download VirtualBox and the VirtualBox Extension Pack  
 {: .prompt-tip }
 
-You will then have a `.exe` and a `.vbox-extpack` open the VirtualBox.exe and start the install.
+You will then have a `.exe` and a `.vbox-extpack`. Open the `VirtualBox.exe` and start the install.
 
-#### Installing VirtualBox
+### ⚙️ Installing VirtualBox
 
-Click on the VirtualBox executable to start the setup. Click on Next to continue.
-
-
-Leave all the settings on their default value and click on Next.
-
-
-Click on `Yes`.
-
-
-Click on `Yes`.
-
-
-Click on `Install`.
-
-
-Click on `Finish` to close the installer and start VirtualBox.\
+1. Click on the VirtualBox executable to start the setup.  
+2. Click on `Next` to continue.  
+3. Leave all the settings at their default values → Click `Next`  
+4. Click on `Yes` → then click `Yes` again  
+5. Click on `Install`  
+6. Click on `Finish` to close the installer and start VirtualBox  
 
 ![Desktop View](/assets/img/HomeLab/HL-1.png){: width="700" height="400" }
 
+---
 
-#### Installing Guest Additions
+### 📦 Installing Guest Additions
 
-From the File Menu bar select: `File -> Tools -> Extension Pack Manager`
+From the menu bar select:  
+`File → Tools → Extension Pack Manager`
 
 ![Desktop View](/assets/img/HomeLab/HL-2.png){: width="700" height="400" }
 
-On the Extension Manager page click on `Install`.
+On the Extension Manager page click `Install`.
 
 ![Desktop View](/assets/img/HomeLab/HL-3.png){: width="700" height="400" }
 
-Select the `.vbox-extpack` file that we downloaded. Click on Open.
-
-Click on `Install` to confirm the selection.
+Select the `.vbox-extpack` file we downloaded → Click `Open` → Click `Install` to confirm
 
 ![Desktop View](/assets/img/HomeLab/HL-4.png){: width="700" height="400" }
 
-Once the installation is complete click on the Hamburger icon on the right-side of `Tools` and select `Welcome`.
+Once installation is complete, click the **hamburger icon** on the right-side of `Tools` and select `Welcome`.
 
-> `UI Changes` 
-With the release of v7.1, Oracle has given Virtual Box GUI a makeover. Make sure to select “Expert” mode by using the toggle at the top left corner. Once in Expert mode all the options will be identical to the options found in the previous versions of Virtual Box.
+> `UI Changes`  
+> With the release of v7.1, Oracle has given VirtualBox GUI a makeover. Make sure to select “Expert” mode by using the toggle at the top left corner. Once in Expert mode, all the options will be identical to the ones from previous versions.  
 {: .prompt-info }
 
-#### Changing VM Storage Location
+---
 
-To change the default storage location of the VMs.
+### 📁 Changing VM Storage Location
 
-From The File Menu bar select: File -> `Preferences`.
+To change the default VM storage location:
 
-From the `General` tab change the value of Default Machine Folder to change the default storage location of the VMs.
+1. From the menu bar select: `File → Preferences`  
+2. Under the `General` tab, change the value of **Default Machine Folder**
 
 ![Desktop View](/assets/img/HomeLab/HL-5.png){: width="700" height="400" }
 
-In the next module, we will start with the installation and configuration of pfSense.
+---
 
-- [Next → Setting Up pfSense: A Step-by-Step Guide](/posts/HomeLab-Installing-pfSense)
+In the next module, we will start with the installation and configuration of **pfSense**.
+
+👉 [Next → Setting Up pfSense: A Step-by-Step Guide](/posts/HomeLab-Installing-pfSense)
