Created new modules and added to SHells overview

--- a/_posts/TryHackMe/Shells/2025-06-25-Shells.md
+++ b/_posts/TryHackMe/Shells/2025-06-25-Shells.md
@@ -368,9 +368,64 @@ Existing Web Shells Available Online
 The power of supported languages by the web servers can result in web shells with lots of functionality and avoid detection at the same time. Let's explore some of the most popular web shells that can be found online 
 
 - **[p0wny-shell](https://github.com/flozz/p0wny-shell) - A minimalistic single-file PHP web shell that allows remote command execution.**
+
+![Desktop View](/assets/img/Shells/1.png){: width="700" height="400" }
+
 - **[b374k shell](https://github.com/b374k/b374k) - A more feature-rich PHP web shell with file management and command execution, among other functionalities.**
+
+![Desktop View](/assets/img/Shells/2.png){: width="700" height="400" }
+
 - **[c99 shell](https://www.r57shell.net/single.php?id=13) - A well-known and robust PHP web shell with extensive functionality**
 
+![Desktop View](/assets/img/Shells/3.png){: width="700" height="400" }
+
 You can find more web shells at: [https://www.r57shell.net/index.php](https://www.r57shell.net/index.php).
+
+## Challenge
+
+Now that we have learned about the different types of reverse shells, let's test our knowledge with a practical exercise, and let's get the flag in the format THM{} from the vulnerable web server. Click on the Start Machine button to start the challenge. After that, it will be accessible on the following URLs:
+
+- 10.10.187.145:8080 hosts the landing page
+- 10.10.187.145:8081 hosts the web application that is vulnerable to command injection.
+- 10.10.187.145:8082 hosts the web application that is vulnerable to an unrestricted file upload.
+
+You can access the above using the AttackBox, which will display on a split screen, or you can use your own access through the VPN.
+
+### Using a reverse or bind shell, exploit the command injection vulnerability to get a shell. What is the content of the flag saved in the / directory?
+
+For this one I will choose a reverse shell and set up a listener on my attack machine as shown below:
+
+![Desktop View](/assets/img/Shells/4.png){: width="700" height="400" }
+
+Next we need to input our reverse shell payload into the website to initiate the reverse shell:
+
+![Desktop View](/assets/img/Shells/5.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Shells/6.png){: width="700" height="400" }
+
+First I try some input into the site then I test if I can run a command injection such as `;` of using my own command after the 1st one I input:
+
+![Desktop View](/assets/img/Shells/7.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Shells/8.png){: width="700" height="400" }
+
+I have found out it is vulnerable so I will execute my reverse shell payload inbetween two `;`
+
+![Desktop View](/assets/img/Shells/9.png){: width="700" height="400" }
+
+This has then established the connection and our reverse shell is set up:
+
+![Desktop View](/assets/img/Shells/10.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Shells/11.png){: width="700" height="400" }
+
+After running `ls` it shows the 3 files, I then ran `ls /` to search the top level directories which displayed the flag we needed.
+
+![Desktop View](/assets/img/Shells/12.png){: width="700" height="400" }
+
+### Using a web shell, exploit the unrestricted file upload vulnerability and get a shell. What is the content of the flag saved in the / directory?
+
+
+
 
 
