--- a/_posts/Projects/2025-04-25-HomeLab.md
+++ b/_posts/Projects/2025-04-25-HomeLab.md
@@ -3,7 +3,7 @@ layout: post
 title: "Home Lab"
 date: 2025-04-25 10:19:00 -0700
 categories: [Project Work, Home Lab]
-tags: [HL]
+tags: [HomeLab]
 description: Security and Pentest Home Lab Environment
 ---
 
