Fixed File Structure

--- a/_posts/TryHackMe/Command Injection/2025-06-26-CI.md
+++ b/_posts/TryHackMe/Command Injection/2025-06-26-CI.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Command Injection"
 date: 2025-06-26 10:00:00 -0700
-categories: [TryHackMe, Web Vulenrabilities, Injection]
+categories: [TryHackMe, Web Security, Injection]
 tags: [THM, Command Injection, Web Security, OWASP, Input Validation]
 description: Learn about command injection vulnerabilities, how attackers exploit them to execute system commands through insecure applications, and strategies for prevention. Based on the TryHackMe Command Injection room.
 ---
