--- a/_posts/TryHackMe/SOC/2025-07-07-SOC_Intro.md
+++ b/_posts/TryHackMe/SOC/2025-07-07-SOC_Intro.md
@@ -2,7 +2,7 @@
 layout: post
 title: "SOC Fundamentals"
 date: 2025-07-07 09:00:00 -0700
-categories: [TryHackMe, SOC, Blue Team]
+categories: [TryHackMe, Blue Team]
 tags: [THM, SOC, Blue Team, Security Operations, Detection, Monitoring]
 description: Learn the fundamentals of a Security Operations Center (SOC), including the roles, responsibilities, and tools used by SOC analysts. Based on the TryHackMe SOC Fundamentals room.
 ---
