--- a/_posts/TryHackMe/Shells/2025-06-25-Shells.md
+++ b/_posts/TryHackMe/Shells/2025-06-25-Shells.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Shells Overview"
 date: 2025-06-25 14:30:00 -0700
-categories: [TryHackMe, Web Vulenrabilities, Shells]
+categories: [TryHackMe, Web Security, Shells]
 tags: [THM, Linux, Reverse Shells, Bind Shells, Web Shells, Netcat]
 description: Learn the differences between reverse, bind, and web shells. Explore how shells work and how attackers use them to gain remote access. Based on the TryHackMe Shells Overview room.
 ---
