fixed shells 13 pic image error

--- a/_posts/TryHackMe/Shells/2025-06-25-Shells.md
+++ b/_posts/TryHackMe/Shells/2025-06-25-Shells.md
@@ -427,6 +427,6 @@ After running `ls` it shows the 3 files, I then ran `ls /` to search the top lev
 
 This one had no filters and let me just upload the web shell php script and using gobuster I found the uploads directory and accessed the shell.
 
-![Desktop View](/assets/img/Shells/13png){: width="700" height="400" }
+![Desktop View](/assets/img/Shells/13.png){: width="700" height="400" }
 
 ![Desktop View](/assets/img/Shells/14.png){: width="700" height="400" }
