--- a/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
+++ b/_posts/TryHackMe/Splunk/2025-07-09-Splunk_201.md
@@ -153,3 +153,21 @@ These fields can reveal the nature of the traffic coming from that IP and help c
 ![Desktop View](/assets/img/Splunk_IH/8.png){: width="700" height="400" }
 
 ![Desktop View](/assets/img/Splunk_IH/9.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Splunk_IH/10.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Splunk_IH/11.png){: width="700" height="400" }
+
+![Desktop View](/assets/img/Splunk_IH/12.png){: width="700" height="400" }
+
+### Validate the IP that is scanning
+
+So what do we need to do to validate the scanning attempt? Simple, dig further into the weblogs. Let us narrow down the result, look into the suricata logs, and see if any rule is triggered on this communication.
+
+**Search Query**: `index=botsv1 imreallynotbatman.com src=40.80.148.42 sourcetype=suricata`
+
+**Search Query Explanation**: This query will show the logs from the suricata log source that are detected/generated from the source IP 40.80.248.42
+
+
+
+We have narrowed our search on the src IP and looked at the source type suricata to see what Suricata triggered alerts. In the right panel, we could not find the field of our interest, so we clicked on more fields and searched for the fields that contained the signature alerts information, which is an important point to note.
